# lace-native

./: CHANGELOG.md  Cargo.toml  GUIDE.md  README.md
.github/workflows/: ci.yml
benches/criterion/: Cargo.toml
benches/criterion/benches/: lace_benchmarks.rs
benches/criterion/src/: lib.rs
benchmarks/rayon-compare/: Cargo.toml  tasks.def
benchmarks/rayon-compare/src/: main.rs
examples/bench/: Cargo.toml  build.rs  tasks.def
examples/bench/src/: main.rs
examples/fib/: Cargo.toml  build.rs  tasks.def
examples/fib/src/: lib.rs  main.rs
examples/nqueens/: Cargo.toml  tasks.def
examples/nqueens/src/: lib.rs  main.rs
examples/rayon-compare/: Cargo.toml
examples/rayon-compare/src/: main.rs
examples/tree/: Cargo.toml  tasks.def
examples/tree/src/: main.rs
examples/uts/: Cargo.toml  tasks.def
examples/uts/src/: lib.rs  main.rs
lace-native/: Cargo.toml  build.rs
lace-native-build/: Cargo.toml
lace-native-build/src/: lib.rs
lace-native/csrc/: lace_helpers.c
lace-native/src/: lib.rs
lace-ws/: Cargo.toml  build.rs
lace-ws-build/: Cargo.toml
lace-ws-build/src/: lib.rs
lace-ws/csrc/: lace_helpers.c
lace-ws/src/: lib.rs
scripts/: vendor-lace.sh
tests/integration/: Cargo.toml  build.rs  tasks.def
tests/integration/src/: lib.rs
