[package]
name = "lace-native-build"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Build-time code generator for lace-native task definitions"
license = "Apache-2.0"
repository = "https://github.com/trolando/lace-native"
homepage = "https://github.com/trolando/lace"
keywords = ["parallelism", "work-stealing", "build-tools"]
categories = ["development-tools::build-utils"]
readme = "../README.md"

[dependencies]
cc = "1"
